[tool.poetry]
name = "eyepatch"
version = "0.1"
description = "A *OS bootchain patcher."
authors = ["m1stadev <adamhamdi31@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/m1stadev/eyepatch"

[tool.poetry.dependencies]
python = "^3.8"
keystone-engine = { git = "https://github.com/keystone-engine/keystone.git", subdirectory = "bindings/python" }
capstone = { git = "https://github.com/capstone-engine/capstone.git", subdirectory = "bindings/python", tag = "5.0.1"}
typing-extensions = "^4.0.0"
loguru = "^0.7.2"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "single"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/m1stadev/eyepatch/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
