[tool.poetry]
name = "eyepatch"
version = "0.1"
description = "An *OS bootchain patching library."
authors = ["m1stadev <adamhamdi31@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/m1stadev/eyepatch"

[tool.poetry.dependencies]
python = "^3.8"
capstone = "^5.0.1"
keystone-engine = "^0.9.2"
typing-extensions = "^4.0.0"
loguru = "^0.7.2"

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "single"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/m1stadev/eyepatch/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
