[project]
name = "eyepatch"
dynamic = ["version"]
description = "An *OS bootchain patching library."
authors = [{ name = "m1stadev", email = "adamhamdi31@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "capstone>=5.0.1",
    "keystone-engine>=0.9.2",
    "typing-extensions>=4.0.0",
    "loguru>=0.7.2"
]

[project.urls]
Repository = "https://github.com/m1stadev/eyepatch"
"Bug Tracker" = "https://github.com/m1stadev/eyepatch/issues"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "semver"
dirty = true


[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["E722"]

[tool.ruff.format]
quote-style = "single"